# frame-oldbackend-public

./: LICENSE  files.tree.txt
.github/workflows/: audit.yml  bottest.yml  build.yml  development-quick.yml  development.yml  diagnostics.yml  library.yml  lint.yml  module-dockers-aws.yml  module-ecs-common-aws.yml  (+9 more)
docker/: Dockerfile.authentication  Dockerfile.bottest  Dockerfile.egress  Dockerfile.ingress  Dockerfile.signaling  Dockerfile.unittest  docker-compose.diagnostics.yml  docker-compose.msteams.yml  docker-compose.quick.yml  docker-compose.remote-develop.yml  docker-compose.remote-prod.yml  docker-compose.unittest.yml  docker-compose.yml  signaling.env
frame/: .browserslistrc  .eslintrc.js  README.md  babel.config.json  jest-puppeteer.config.js  jsconfig.json  package.json  tsconfig.json
rust/: Cargo.toml  README.md
rust/.cargo/: config
rust/src/: main.rs
rust/src/config/: config.rs
rust/src/handlers/: audio_consumer.rs  codecs.rs  connect_ingress_egress.rs  cpu_load.rs  data_relay_producer.rs  egress.rs  event_consumer.rs  event_producer.rs  ingress.rs  media_producer.rs  media_relay.rs  mod.rs  movement_consumer.rs  movement_producer.rs  pendingrelays.rs  relay_connect.rs  relay_consumer.rs  relay_egress.rs  relay_producer.rs  router.rs  test_cpu_load.rs  test_create_router_group_new_room.rs  video_consumer.rs  worker.rs
rust/src/models/: message.rs  mod.rs  sfu.rs
rust/src/server/: message_handle.rs  mod.rs  models.rs  register_server.rs  stream.rs
rust/src/utils/: arg.rs  codec.rs  cpu_worker_load.rs  mod.rs  utils.rs  worker_load.rs
(+133 files in other folders)
