[profile.dev]
opt-level = 0
debug = true # Platform-specific.
debug-assertions = true
overflow-checks = true
lto = false
panic = 'unwind'
incremental = true
codegen-units = 256
rpath = false

[package]
name = "frame-mediasoup"
version = "1.0.0"
edition = "2021"
# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mediasoup = "0.11.4"
tokio = { version = "1.32.0", features = ["full"]}
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.105"
tokio-util = {version="0.7.8", features=["codec"]}
uuid = { version="1.4.1", features=["v4"] }
bytes = "1.4.0"
byteorder = "1.4.3"
futures = { version = "0.3.28", default-features = true }
env_logger = "0.10.0"
clap = { version = "4.4.1", features = ["derive"] }
colored = "2.0.4"
os-id = "3.0.1"
local_ipaddress = "0.1.3"
systemstat = "0.2.3"
log = "0.4.20"
